<resources>
    <string name="app_name">RISS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title">Tab Title</string>
    <string name="go_to_summary">Go To Summary</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="dismiss">DISMISS</string>
    <string name="top_funds">Top Funds</string>
    <string name="title_activity_fund_details_screen">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="funds_added">Fund Added successfully</string>
    <string name="failed_to_add_funds">failed to Add Fund</string>
    <string name="cancel_add_funds">cancelled to add Fund</string>
    <string name="liked">Liked</string>
    <string name="again">try again</string>
    <string name="try_again">try again</string>
    <string name="onliked">unlike fund</string>
    <string name="create_fund">Create Fund</string>
    <string name="select_image">Select Image</string>
    <string name="change_image">Change Image</string>
    <string name="demo">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="fund_text">How Funds Work Individuals, businesses, and governments all use funds to set aside money. Individuals might establish an emergency fund or rainy-day fund to pay for unforeseen expenses or a trust fund to set aside money for a specific person.  Individual and institutional investors can also place money in different types of funds with the goal of earning money. Examples include mutual funds, which gather money from numerous investors and invest it in a diversified portfolio of assets, and hedge funds, which invest the assets of high-net-worth individuals (HNWI) and institutions in a way that is designed to earn above-market returns. Governments use funds, such as special revenue funds, to pay for specific public expenses.  Common Types of Funds The following are examples of funds commonly used for personal ventures:  Emergency funds are personal savings vehicles created by individuals used to cover periods of financial hardships, such as job loss, prolonged illness or a major expense. The rule of thumb is to create an emergency fund that contains at least three months worth of net income. College funds are usually tax-advantaged savings plans set up by families to allocate funds for their children’s college expenses. Trust funds are legal arrangement set up by a grantor who appoints a trustee to administer valuable assets for the benefit of a listed beneficiary for a period of time, after which all or a portion of the funds are released to the beneficiary or beneficiaries. Retirement funds are savings vehicles used by individuals saving for retirement. Retirees receive monthly income or pensions from retirement funds.</string>
    <string name="msg_token_fmt">"TOKEN "</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="update_profile">Update Profile</string>
    <string name="current_value">Current Value</string>
    <string name="welcome_msg">Welcome! to RISS</string>
    <string name="total_fund_manager">Total Fund\nManager</string>
    <string name="overview">Overview</string>
    <string name="operation">Operations</string>
    <string name="sign_out">Sign Out</string>
    <string name="withdraw_fund">Withdraw Fund</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enetr_quantity">Enter quantity here</string>
    <string name="view_all">View All</string>
    <string name="supports">Support</string>
    <string name="fund_name">Fund Name</string>
    <string name="mobile_number">Mobile No</string>
    <string name="otp">OTP</string>
    <string name="heading_withdraw_fund">RULES FOR WITHDRAWAL FROM A FUND</string>
    <string name="withdraw_rule_1">1. Minimum withdraw amount will be Rs 1000.</string>
    <string name="withdraw_rule_2">2. Next withdrawal request could be done only after 30 days of previous withdrawal.</string>
    <string name="withdraw_rule_3">3. Handling Charges on Fund Withdrawal :-</string>
    <string name="select_id_type">Select ID type first</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="already_image_verifified_text">Image Already verified, it can not be change</string>
    <string name="selected_id_type">Select ID type</string>
</resources>