<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="29dp"
    android:paddingTop="45dp"
    android:paddingRight="29dp"
    android:paddingBottom="50dp">


    <TextView
        android:visibility="gone"
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="Hey,"
        android:textColor="#1F306E"
        android:textSize="22sp"
        android:textStyle="bold" />


    <TextView
        android:visibility="gone"
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="You want to take miracle drops, So please enter quantity."
        android:textColor="#424242"
        android:textSize="20sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/drugs"
            app:tint="#F5487F" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="Enter Quantity"
            android:textColor="#626262"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:gravity="center_vertical"
        android:hint="@string/enetr_quantity"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#80626262"
        android:textColorHint="#80626262" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_border"
            android:drawableTint="#F5487F"
            android:fontFamily="@font/lato_bold"
            android:text="@string/cancel"
            android:textColor="#F5487F"
            android:textSize="19sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_border"
            android:backgroundTint="#F5487F"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>